Fix for Torchlight-based line number spacing in code blocks

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -26,3 +26,7 @@ img[src$='#floatright'] {
 .chroma {
 	background-color: unset !important;
 }
+
+code .line-number {
+	margin-right: 1rem;
+}
